# coding: utf-8
[metadata]
name = {project_name}
version = 0.0.1
description = {tagline}
long_description = file: README.md
long_description_content_type = text/markdown
author = Puria Nafisi Azizi
author_email = puria@dyne.org
project_urls =
    Source Code = https://github.com/puria/{project_name}
license = Apache-2.0
license_file = LICENSE
keywords = words
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python

[options]
packages = find:
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
    codecov

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = {project_name}

[coverage:report]
show_missing = true

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[flake8]
exclude = .tox,build
ignore = D107,D202,D203,D401,E203,E402,E501,W503
inline-quotes = double
max-line-length = 120

[isort]
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = tests
known_third_party =
line_length = 120
multi_line_output = 3
skip = .tox,build

[mypy]
follow_imports = skip
ignore_missing_imports = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True

[nitpick]
ignore = NIP104,NIP341

[nitpick.styles]
include = ["styles/python37", "styles/poetry"]
